--- a/index.html
+++ b/index.html
@@ -137,6 +137,84 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
+                    <div class="col-lg-4 ml-auto"><p class="lead">My name is Jessica Taylor, and this website serves to display my Web Design and other related works.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">The above are various projects I have created throughout my time in the program.</p></div>
+                </div>
+                <!-- About Section Button
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                        <i class="fas fa-download mr-2"></i>
+                        Free Download!
+                    </a>
+                </div>
+                -->
+            </div>
+        </section>
+         <!-- Education Section-->
+        <section class="page-section bg-primary text-white mb-0" id="education">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">Education</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am a senior at Freehold Boro High School who is a member of the Web Design Pathway program of which I have been participating in since my sophomore year of high school.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">I have become proficient in the coding languages HTML, CSS, and Javascript, along with developing skills in creating wireframes and communicating with clientele.</p></div>
+                </div>
+                <!-- About Section Button
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                        <i class="fas fa-download mr-2"></i>
+                        Free Download!
+                    </a>
+                </div>
+                -->
+            </div>
+        </section>
+         <!-- About Section-->
+        <section class="page-section bg-primary text-white mb-0" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am a senior at Freehold Boro High School who is a member of the Web Design Pathway program of which I have been participating in since my sophomore year of high school.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">I have become proficient in the coding languages HTML, CSS, and Javascript, along with developing skills in creating wireframes and communicating with clientele.</p></div>
+                </div>
+                <!-- About Section Button
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                        <i class="fas fa-download mr-2"></i>
+                        Free Download!
+                    </a>
+                </div>
+                -->
+            </div>
+        </section>
+         <!-- About Section-->
+        <section class="page-section bg-primary text-white mb-0" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead">I am a senior at Freehold Boro High School who is a member of the Web Design Pathway program of which I have been participating in since my sophomore year of high school.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">I have become proficient in the coding languages HTML, CSS, and Javascript, along with developing skills in creating wireframes and communicating with clientele.</p></div>
                 </div>
