--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                 -->
             </div>
         </section>
-         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+         <!-- Work Section-->
+        <section class="page-section bg-primary text-white mb-0" id="work">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Work</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -189,8 +189,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">I am a senior at Freehold Boro High School who is a member of the Web Design Pathway program of which I have been participating in since my sophomore year of high school.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">I have become proficient in the coding languages HTML, CSS, and Javascript, along with developing skills in creating wireframes and communicating with clientele.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I have had experience communicating and working with clients through the Web Design program.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">An example of this project is linked above.</p></div>
                 </div>
                 <!-- About Section Button
                 <div class="text-center mt-4">
@@ -202,8 +202,8 @@
                 -->
             </div>
         </section>
-         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+         <!-- Interests Section-->
+        <section class="page-section bg-primary text-white mb-0" id="interests">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
