--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <section class="page-section bg-primary text-white mb-0" id="interests">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Interests</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -215,8 +215,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">I am a senior at Freehold Boro High School who is a member of the Web Design Pathway program of which I have been participating in since my sophomore year of high school.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">I have become proficient in the coding languages HTML, CSS, and Javascript, along with developing skills in creating wireframes and communicating with clientele.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am interested in pursuing a career in digital media and I believe the skills I've learned in web design have prepared me for a career in web design.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">Along with learning valuable skills in web design, I think I can find ways to cross over my interest for art and graphic design into web design.</p></div>
                 </div>
                 <!-- About Section Button
                 <div class="text-center mt-4">
